--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  convert: "^2.1.1"
-  protobuf: "^1.0.1"
+  convert: ^2.1.1
+  protobuf: ^1.0.1
   rxdart: ^0.24.0
 
 dev_dependencies:
